--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 <div class="project-card">
                     <img src="images/picker-driver.jpg" alt="Picker & Driver App">
                     <div class="project-info">
-                        <h3>Picker & Driver App</h3>
-                        <p>Logistics management application for Ansar Gallery with real-time tracking.</p>
+                        <h3>Ansar Logistics</h3>
+                        <p>Logistics management application for Ansar Gallery with real-time tracking.Pickers,Drivers and Section Incharges</p>
                         <div class="project-tech">
                             <span>Flutter</span>
                             <span>Firebase</span>
