--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="container">
-            <a href="#home" class="logo">Haris Rahman</a>
+            <a href="#home" class="logo">Muhammed Haris Rahman</a>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
