--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="images/flip-marketing.jpg" alt="Flip Marketing App">
+                    <img src="images/lip-marketing.jpg" alt="Flip Marketing App">
                     <div class="project-info">
                         <h3>Flip Marketing App</h3>
                         <p>Financial marketing application developed for Geojit Technologies.</p>
