--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="images/goodbuy-seller.jpg" alt="GoodBuy Seller">
+                    <img src="images/goodbuy.jpg" alt="GoodBuy Seller">
                     <div class="project-info">
                         <h3>GoodBuy Seller</h3>
                         <p>E-commerce platform for sellers to manage inventory and orders.</p>
