--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     </nav>
 
     <!-- Hero Section -->
+    <!-- <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Muhammad Haris Rahman</h1>
+                <h2>Senior Flutter Developer</h2>
+                <p>Building high-performance mobile applications for Android & iOS</p>
+                <div class="hero-buttons">
+                    <a href="#contact" class="btn btn-primary">Hire Me</a>
+                    <a href="#projects" class="btn btn-secondary">View Work</a>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
