--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <div class="contact-grid">
                 <div class="contact-info">
                     <h3>Contact Information</h3>
-                    <p><i class="fas fa-envelope"></i> harisrahmankhta@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +974 5013 4119</p>
+                    <p><i class="fas fa-envelope"></i> harisrahmankbta@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +974 5015 4119</p>
                     <p><i class="fas fa-map-marker-alt"></i> Doha, Qatar</p>
                     
                     <div class="social-links">
